# frank-models

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
architectures/: llm_moe_cached.mlir
architectures/llm/: llm_inference.mlir  transformer_layer_moe_decode.mlir  transformer_layer_moe_prefill.mlir
components/activation/: swiglu.mlir
components/attention/: attention_block.mlir  attention_block_decode.mlir  attention_block_prefill.mlir  attention_gqa.mlir
components/embedding/: embedding_lookup.mlir
components/kvcache/: kvcache.mlir  kvcache_direct.mlir  kvcache_paged.mlir  kvcache_seq_paged.mlir
components/moe/: concat_gemm_id_silu.mlir  moe_ffn_block.mlir  mul_mat_id.mlir
components/normalization/: rms_norm.mlir
components/position/: rope.mlir
components/test_linking/: math_ops.mlir  use_math.mlir
layers/: transformer_layer_moe.mlir  transformer_layer_moe.py
models/llm/: dbrx.mlir  grok.mlir  mixtral.mlir  mixtral_cached.mlir  qwen2moe.mlir
oracles/: __init__.py  activation.py  attention.py  embedding.py  kvcache.py  kvcache_direct.py  kvcache_paged.py  kvcache_seq_paged.py  moe.py  normalization.py  position.py  transformer_layer.py
skills/: README.md
skills/instantiation/: rms_norm.md
skills/oracle_generation/: from_mlir.md
tests/: __init__.py  conftest.py  test_attention_block.py  test_attention_gqa.py  test_embedding_lookup.py  test_linking.py  test_moe_ffn_block.py  test_mul_mat_id.py  test_rms_norm.py  test_rope.py  test_swiglu.py  test_transformer_layer_moe.py  utils.py
(+19 files in other folders)
